// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-ip-comment GET /add/check-address should match the snapshot 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-xl govuk-!-margin-bottom-3">Did the interested party provide an address?</h1>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="addressProvided" name="addressProvided"
                            type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="addressProvided">Yes</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="addressProvided-2" name="addressProvided"
                            type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="addressProvided-2">No</label>
                        </div>
                    </div>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`add-ip-comment GET /add/check-your-answers should match the snapshot 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-xl govuk-!-margin-bottom-3">Check details and add comment</h1>
                </div>
            </div>
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Contact Details</dt>
                    <dd class="govuk-summary-list__value">
                        <br>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/add/ip-details"> Change</a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value"></dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/add/ip-address"> Change</a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value"><a href='#'></a>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/add/upload"> Change</a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Redaction Status</dt>
                    <dd class="govuk-summary-list__value"></dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/add/redaction-status"> Change</a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Submitted</dt>
                    <dd class="govuk-summary-list__value"></dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/add/date-submitted"> Change</a>
                    </dd>
                </div>
            </dl>
            <form method="post" novalidate="novalidate">
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`add-ip-comment GET /add/ip-address should match the snapshot 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Interested party&#39;s address</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="address-line-1">Address line 1</label>
                    <input class="govuk-input" id="address-line-1" name="addressLine1"
                    type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="address-line-2">Address line 2 (optional)</label>
                    <input class="govuk-input" id="address-line-2"
                    name="addressLine2" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="address-town">Town or city</label>
                    <input class="govuk-input govuk-input govuk-input--width-20"
                    id="address-town" name="town" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="address-county">County (optional)</label>
                    <input class="govuk-input govuk-input govuk-input--width-20"
                    id="address-county" name="county" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="address-postcode">Postcode</label>
                    <input class="govuk-input govuk-input govuk-input--width-10"
                    id="address-postcode" name="postCode" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`add-ip-comment GET /add/ip-details should match the snapshot 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Interested party&#39;s details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">First name</label>
                    <input class="govuk-input" id="first-name" name="firstName"
                    type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Last name</label>
                    <input class="govuk-input" id="last-name" name="lastName"
                    type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Email address (optional)</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`add-ip-comment GET /date-submitted should match the snapshot 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Enter date submitted</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" role="group" aria-describedby="date-hint">
                        <div id="date-hint" class="govuk-hint">For example, 28 10 2024</div>
                        <div class="govuk-date-input" id="date">
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="date-day">Day</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="date-day" name="date-day" type="text" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="date-month">Month</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                    id="date-month" name="date-month" type="text" inputmode="numeric">
                                </div>
                            </div>
                            <div class="govuk-date-input__item">
                                <div class="govuk-form-group">
                                    <label class="govuk-label govuk-date-input__label" for="date-year">Year</label>
                                    <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                    id="date-year" name="date-year" type="text" inputmode="numeric">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
